<resources>
    <string name="app_name">CSET Service</string>
    <string name="splash_screen">welcome to xyz</string>
    <string name="welcome">Login or Sign App Connect with xyz</string>
    <string name="signup">Find the Service</string>
    <string name="signup_engineer">Find the job</string>
    <string name="already_have_account">Already have an account</string>
    <string name="login">login</string>
    <string name="main_signup">Sign Up</string>
    <string name="otp_page">verify your account by OTP</string>
    <string name="verify_otp">Verify Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="name">Name</string>
    <string name="Password">Password</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="Working_Experience">Working Experience</string>
    <string name="term_check">I have read all term and condition of the app</string>
    <string name="referral">Referral code</string>
    <string name="confirm">Confirm Password</string>
    <string name="id_prove">Aadhar Id Number</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="Enter_here">Enter here</string>
    <string name="Resend">Resend in 10:00</string>
    <string name="WELCOME">WELCOME TO XYZ</string>
    <string name="Get_started">Get started</string>
    <string name="Login_Account">Login Account</string>
    <string name="otp_not_receive">If OTP is not Received</string>
    <string name="Account_Type">Account Type</string>
    <string name="dont_have_account">I do not have account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="if_have_account">Already have an account?</string>
    <string name="Personal_Details">Personal Details</string>
    <string name="Aadhar_Number">Aadhar Number</string>
    <string name="Custom_skill">Custom skill</string>
    <string name="Next">NEXT</string>
    <string name="chat_page">Chat Page</string>
    <string name="chat_box">Type a message</string>
    <string name="send">Send</string>
</resources>