<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_Account"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="50dp"/>
    <ImageView
        android:contentDescription="@string/Login_Account"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/option_page"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_editext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="8dp">
            <EditText

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/Account_Type"

                android:inputType="textNoSuggestions"
                android:textColor="@color/black"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/custom_editext"
                />

            <EditText
                android:autofillHints="phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:textColor="@color/black"
                android:drawableStart="@drawable/baseline_phone_24"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/custom_editext"
                />

            <EditText
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/custom_editext"
                />

            <TextView
                android:id="@+id/forgot_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_pass"
                android:textStyle="bold" />

            <Button
                android:id="@+id/user_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dont_have_account"/>
    <TextView
        android:id="@+id/signup_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/main_signup"
        android:textStyle="bold" />

</LinearLayout>