<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/chatToolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:backgroundTint="@color/colorPrimary"
            android:title="@string/chat_page"
            android:titleTextColor="@android:color/white"
            app:titleCentered="true"
            app:navigationIcon="@drawable/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_signup"
            app:layout_constraintTop_toBottomOf="@id/chatToolbar"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_marginTop="20dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/user_signup"
            android:contentDescription="@string/main_signup" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/custom_editext"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <EditText
                    android:textColorHint="@color/hint"
                    android:autofillHints="@string/Name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/Name"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:background="@drawable/custom_editext"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>

                <EditText
                    android:autofillHints="@string/Phone_Number"
                    android:textColorHint="@color/hint"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/Phone_Number"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:background="@drawable/custom_editext"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>

                <EditText
                    android:autofillHints="@string/Password"
                    android:textColorHint="@color/hint"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:background="@drawable/custom_editext"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>

                <EditText
                    android:id="@+id/location"
                    android:textColorHint="@color/hint"
                    android:autofillHints="@string/location"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/location"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/location"

                    android:background="@drawable/custom_editext"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"/>
                <EditText
                    android:textColorHint="@color/hint"
                    android:autofillHints="referral_code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/referral"
                    android:inputType="number"
                    android:drawablePadding="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="1dp"
                    android:background="@drawable/custom_editext"
                    />

                <Button
                    android:id="@+id/user_signup"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/signup"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/if_have_account" />

        <TextView
            android:id="@+id/login_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/login"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
