<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirm_pages">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WELCOME"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <ImageView
        android:contentDescription="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/undraw_success_288d"
        android:padding="20dp"
        />
    <Button
        android:id="@+id/user_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/Get_started"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>