<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".forgot_password">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="50dp"/>
    <ImageView
        android:contentDescription="@string/forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/undraw_designer_efwz"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_editext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="8dp">

            <EditText
                android:autofillHints="phone"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:textColor="@color/black"
                android:drawableStart="@drawable/baseline_phone_24"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/custom_editext"
                />
            <EditText
                android:autofillHints="password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Enter_here"
                android:inputType="number"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/custom_editext"
                />
            <Button
                android:id="@+id/user_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/enter_otp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                />
            <Button
                android:id="@+id/resend"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:backgroundTint="@color/black"
                android:text="@string/Resend"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>