<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_sign_up_page">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_signup"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/user_signup"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/custom_editext">
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:hint="  Name"
            android:background="@drawable/custom_editext"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:hint="  Phone number"
            android:background="@drawable/custom_editext"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:hint="  Password"
            android:background="@drawable/custom_editext"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:hint="  Name"
            android:background="@drawable/custom_editext"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/user_signup"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/signup"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_account"/>
    <TextView
        android:id="@+id/login_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textStyle="bold" />
</LinearLayout>